問題1の解答を追加

--- a/assignment_minicamp/解答.md
+++ b/assignment_minicamp/解答.md
@@ -1,12 +1,35 @@
 # セキュリティ・ミニキャンプ オンライン 2021の応募課題の解答
 
-## 問題2
+## 問題1
 
 ### 問題文
 
-配布する pcap ファイル (assignment_seiya-km.pcap) をフロー形式に変換し，次の各点について考察してください。変換は zeek (https://zeek.org/) を推奨しますが，nfdump など，他のソフトウェアを利用して頂いても結構です。ただし，課題提出時に利用したソフトウェア名を併記してください。
+下記はとある FAT32 (VFAT) でフォーマットされた USB メモリのダンプの抜粋です。
+
+001fc480: 4170 0069 006e 0065 002e 000f 00ad 7400  Ap.i.n.e......t.
+001fc490: 7800 7400 0000 ffff ffff 0000 ffff ffff  x.t.............
+001fc4a0: 5049 4e45 2020 2020 5458 5420 001d 72a0  PINE    TXT ..r.
+001fc4b0: 1053 1053 0000 72a0 1053 0500 0900 0000  .S.S..r..S......
+001fc4c0: 4177 006f 0072 0064 002e 000f 00f2 7400  Aw.o.r.d......t.
+001fc4d0: 7800 7400 0000 ffff ffff 0000 ffff ffff  x.t.............
+001fc4e0: 574f 5244 2020 2020 5458 5420 0097 25a0  WORD    TXT ..%.
+001fc4f0: 1053 1053 0000 25a0 1053 0600 0900 0000  .S.S..%..S......
+001fc500: e573 0065 0063 002e 0074 000f 0077 7800  .s.e.c...t...wx.
+001fc510: 7400 0000 ffff ffff ffff 0000 ffff ffff  t...............
+001fc520: e545 4320 2020 2020 5458 5420 002d 28a0  .EC     TXT .-(.
+001fc530: 1053 1053 0000 28a0 1053 0700 0500 0000  .S.S..(..S......
+
+この中から消去された可能性のあるファイルを特定し、その名前を教えてください。
+また削除されたファイルについて、その判断方法やファイル名の復元方法等についても
+可能な範囲で教えてください。
 
 ### 解答
+
+- 削除されたファイル名: sec.txt
+- 理由: ファイル名の先頭にファイルが削除されたことを示すフラグ0xe5が設定されているから
+- ファイル名の復元方法: SFNの前の部分に設定されているLFNで、unicodeでエンコードされているファイル名ではsec.txtと書かれているから
+
+参考: http://elm-chan.org/docs/fat.html
 
 ## 問題3
 
